Add AGENTS.md to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Claude Code settings
+﻿# Claude Code settings
 .claude/
 
 # Memo directory
@@ -6,3 +6,6 @@ memo
 
 # WeakAuras debug documentation (work in progress)
 WeakAuras_Debug_Notes.md
+
+# Generated contributor guide
+AGENTS.md
