--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-﻿# Claude Code settings
-.claude/
+﻿# Claude Code settings (but keep commands)
+.claude/*
+!.claude/commands/
 
 # Memo directory
 memo
